--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -2,40 +2,45 @@
 import PageLayout from "@/layouts/Base.astro";
 
 const meta = {
-  title: "About",
-  description: "About El Zubeir Huweidi",
+	title: "About",
+	description: "About El Zubeir Huweidi",
 };
 ---
 
 <PageLayout meta={meta}>
-  <div class="prose prose-cactus max-w-none mb-8">
-    <h2 class="mb-4">whoami</h2>
-    <p>Muslim, Libyan, and a Software Engineer</p>
-    <p>Backend Engineer interested in System Design, FOSS and AI</p>
-    <p>Simple man who strives to simplify the complicated without sacrificing correctness</p>
-    <p>Goal in life is to be a key to goodness and leave behind a legacy of goodness</p>
+	<div class="prose prose-cactus mb-8 max-w-none">
+		<h2 class="mb-4">whoami</h2>
+		<p>Muslim, Libyan, and a Software Engineer</p>
+		<p>Backend Engineer interested in System Design and FOSS</p>
+		<p>Simple man who strives to simplify the complicated without sacrificing correctness</p>
+		<p>Goal in life is to be a key to goodness and leave behind a legacy of goodness</p>
 
-    <h2 class="mb-4">projects</h2>
+		<h2 class="mb-4">projects</h2>
 
-    <ul class="list-disc list-inside mb-8">
-      <li>
-        <strong><a href="http://github.com/zizouhuweidi/bayt-alhikmah">bayt-alhikmah</a></strong> knowledge center
-      </li>
-      <li>
-        <strong><a href="http://github.com/zizouhuweidi/dahaa-backend">dahaa</a></strong> quiz game where you bullshit your friends
-      </li>
-      <li>
-        <strong><a href="http://github.com/zizouhuweidi/jester">jester</a></strong> cli that tells shit jokes
-      </li>
-      <li>
-        <strong><a href="http://github.com/zizouhuweidi/slander-detection">slander-detection</a></strong> slander detection model
-      </li>
-    </ul>
+		<ul class="mb-8 list-inside list-disc">
+			<li>
+				<strong><a href="http://github.com/zizouhuweidi/bayt-alhikmah">bayt-alhikmah</a></strong> knowledge
+				center
+			</li>
+			<li>
+				<strong><a href="http://github.com/zizouhuweidi/dahaa-backend">dahaa</a></strong> quiz game where
+				you bullshit your friends
+			</li>
+			<li>
+				<strong><a href="http://github.com/zizouhuweidi/jester">jester</a></strong> cli that tells shit
+				jokes
+			</li>
+			<li>
+				<strong
+					><a href="http://github.com/zizouhuweidi/slander-detection">slander-detection</a></strong
+				> slander detection model
+			</li>
+		</ul>
 
-    <h2 class="mb-4">skills</h2>
-    <ul class="list-disc list-inside">
-      <li><strong>Programming Languages:</strong> Go, Python, C#, TypeScript, C++</li>
-      <li><strong>Tools:</strong> Postgres, MySQL, Redis, Kafka, Git, Linux, Docker</li>
-    </ul>
-  </div>
+		<h2 class="mb-4">skills</h2>
+		<ul class="list-inside list-disc">
+			<li><strong>Programming Languages:</strong> Go, Python, C#, TypeScript, C++</li>
+			<li><strong>Tools:</strong> Postgres, MySQL, Redis, RabbitMQ, Docker, Git</li>
+		</ul>
+	</div>
 </PageLayout>
